--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^0.1.2",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
@@ -30,6 +31,7 @@
     "@nestjs/typeorm": "^7.1.0",
     "@nestjs/websockets": "^7.4.2",
     "bcrypt": "^5.0.0",
+    "bull": "^3.18.0",
     "casbin": "^5.0.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
@@ -57,6 +59,7 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/bull": "^3.14.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
