--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "casbin": "^5.0.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "convict": "^6.0.0",
     "cors": "^2.8.5",
-    "nest-authz": "^2.0.0",
     "nest-winston": "^1.3.6",
     "nestjs-casbin": "^2.0.8",
     "passport": "^0.4.1",
@@ -52,13 +52,13 @@
     "socket.io": "^2.3.0",
     "typeorm": "^0.2.25",
     "typeorm-adapter": "^1.2.0",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "@nestjs/cli": "^7.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcrypt": "3.0.0",
     "@types/bull": "^3.14.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
