add migrations with seeds

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ TYPEORM_PORT = 5432
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = true
 TYPEORM_ENTITIES = dist/entities/*.js
+TYPEORM_MIGRATIONS = ./dist/migrations/*.js
+TYPEORM_MIGRATIONS_DIR = ./dist/migrations
+TYPEORM_SEEDING_FACTORIES=src/factories/**/*{.ts,.js}
+TYPEORM_SEEDING_SEEDS=src/seeds/**/*{.ts,.js}
 PORT=3000
 
 
