--- a/package.json
+++ b/package.json
@@ -18,10 +18,19 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js",
+    "typeorm:schema:drop": "yarn typeorm schema:drop",
+    "typeorm:schema:sync": "yarn typeorm schema:sync",
+    "typeorm:migrate": "yarn typeorm migration:generate -n",
+    "typeorm:revert": "yarn typeorm migration:revert",
+    "typeorm:run": "yarn typeorm migration:run",
+    "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
+    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
   },
   "dependencies": {
     "@nestjs/bull": "^0.1.2",
+    "@nestjs/cli": "^7.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
@@ -52,8 +61,8 @@
     "socket.io": "^2.3.0",
     "typeorm": "^0.2.25",
     "typeorm-adapter": "^1.2.0",
-    "winston": "^3.3.3",
-    "@nestjs/cli": "^7.0.0"
+    "typeorm-seeding": "^1.6.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@nestjs/schematics": "^7.0.0",
@@ -61,6 +70,7 @@
     "@types/bcrypt": "3.0.0",
     "@types/bull": "^3.14.0",
     "@types/express": "^4.17.3",
+    "@types/faker": "^4.1.12",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
